fixed button spacing

--- a/scss/includes/_global.scss
+++ b/scss/includes/_global.scss
@@ -59,7 +59,7 @@ a {
 	    &--transparent {
 			color: #003087;
 	        background: transparent;
-	        top: 10px;
+	        top: -10px;
 	        border: 1px solid #003087;
 		}
 		&--light {
