--- a/scss/includes/_media-screen.scss
+++ b/scss/includes/_media-screen.scss
@@ -168,6 +168,10 @@
 		box-sizing: border-box;
 	}
 
+	a.btn--transparent {
+		top: 0;
+	}
+
 	footer .footer-nav__item {
 		width: 100%;
 		text-align: center;
